No idea how I screwed ups the building target?

--- a/funky-radish/Views/Base.lproj/Main.storyboard
+++ b/funky-radish/Views/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nDw-No-frB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nDw-No-frB">
     <device id="ipad10_2" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -134,19 +134,19 @@
             <objects>
                 <viewController id="e6D-pJ-vfE" customClass="RecipeSearchViewController" customModule="funky_radish" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nti-T5-iog">
-                        <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
+                        <rect key="frame" x="0.0" y="0.0" width="704" height="995.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Suc-ga-d4X">
-                                <rect key="frame" x="20" y="50" width="770" height="1030"/>
+                                <rect key="frame" x="20" y="0.0" width="664" height="995.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeListViewCell" id="uln-Cb-aiH">
-                                        <rect key="frame" x="0.0" y="28" width="770" height="44"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="664" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uln-Cb-aiH" id="kZj-cQ-Kzx">
-                                            <rect key="frame" x="0.0" y="0.0" width="770" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="664" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -185,11 +185,11 @@
             <objects>
                 <viewController id="tJ8-s5-WdQ" customClass="RecipeViewController" customModule="funky_radish" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ucp-Uy-lnD">
-                        <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
+                        <rect key="frame" x="0.0" y="0.0" width="704" height="995.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QH-hJ-92k">
-                                <rect key="frame" x="15" y="85" width="675" height="40"/>
+                                <rect key="frame" x="15" y="35" width="569" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="70" id="dHk-Ht-PQX"/>
                                     <constraint firstAttribute="height" constant="40" id="fLu-Rt-VbB"/>
@@ -202,7 +202,7 @@
                                 </variation>
                             </label>
                             <button opaque="NO" clipsSubviews="YES" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afq-9L-AdY" userLabel="Trash">
-                                <rect key="frame" x="735" y="85" width="60" height="30"/>
+                                <rect key="frame" x="629" y="35" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="a4n-Gs-195"/>
                                     <constraint firstAttribute="width" constant="30" id="c6a-0d-Pix">
@@ -216,7 +216,7 @@
                                 </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6B2-pb-DQi">
-                                <rect key="frame" x="380.5" y="948" width="51" height="35"/>
+                                <rect key="frame" x="327.5" y="898" width="51" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="77h-zn-o7w"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="Jyp-5a-TOB"/>
@@ -226,7 +226,7 @@
                                 </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msO-sj-qpV">
-                                <rect key="frame" x="359.5" y="880" width="91.5" height="43"/>
+                                <rect key="frame" x="306.5" y="830" width="91.5" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -235,7 +235,7 @@
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V7G-Ht-UKG" userLabel="Edit">
-                                <rect key="frame" x="20" y="135" width="45" height="45"/>
+                                <rect key="frame" x="20" y="85" width="45" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="upl-cq-c1t">
                                         <variation key="heightClass=regular-widthClass=regular" constant="45"/>
@@ -251,7 +251,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eiR-bG-E22">
-                                <rect key="frame" x="105" y="205" width="600" height="650"/>
+                                <rect key="frame" x="52" y="155" width="600" height="650"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="335" id="gcF-9c-gdK">
@@ -420,9 +420,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="xth-nj-9W2"/>
+        <segue reference="gsg-3J-eJH"/>
         <segue reference="tFw-3H-ysE"/>
-        <segue reference="ENc-nc-dkD"/>
+        <segue reference="UfR-CA-od2"/>
         <segue reference="2f1-gM-vau"/>
     </inferredMetricsTieBreakers>
     <resources>
